--- a/hackernews-react-apollo/package.json
+++ b/hackernews-react-apollo/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "subscriptions-transport-ws": "^0.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
